--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "date-fns": "^4.1.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.4",
-    "next": "15.4.1",
+    "next": "^15.4.8",
     "next-auth": "^5.0.0-beta.29",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "validator": "^13.15.15"
   },
